/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -188,6 +188,7 @@ So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ f
 But
 \begin{align*}
 k[x] \actson \vector v 
-\definedas \theset{f(A)\vector v \suchthat f \in k[x]}
+&\definedas \theset{f(x) \actson \vector v \suchthat f \in k[x]} \\
+&= \spanof_k \theset{1 \actson \vector v, x \actson \vector v, \cdots x^{n-1} \actson \vector v}
 .\end{align*}
 
