/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -189,6 +189,6 @@ But
 \begin{align*}
 k[x] \actson \vector v 
 &\definedas \theset{f(x) \actson \vector v \suchthat f \in k[x]} \\
-&= \spanof_k \theset{1 \actson \vector v, x \actson \vector v, \cdots x^{n-1} \actson \vector v}
+&= \spanof_k \theset{x^k \actson \vector v \suchthat k \geq 0}
 .\end{align*}
 
