/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -185,10 +185,14 @@ So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ f
 
 > I.e. there is some element $\vector v\in V$ whose orbit is all of $V$.
 
-But
+But then noting that monomials span $k[x]$, we can write
 \begin{align*}
-k[x] \actson \vector v 
+V &= 
+k[x] \actson \vector v \\
 &\definedas \theset{f(x) \actson \vector v \suchthat f \in k[x]} \\
-&= \spanof_k \theset{x^k \actson \vector v \suchthat k \geq 0}
+&= \spanof_k \theset{x^k \actson \vector v \suchthat k \geq 0} \\
+&\definedas \spanof_k \theset{A^k\vector v \suchthat k \geq 0}
 .\end{align*}
+
+Moreover,
 
