/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -194,5 +194,6 @@ k[x] \actson \vector v \\
 &\definedas \spanof_k \theset{A^k\vector v \suchthat k \geq 0}
 .\end{align*}
 
-Moreover,
+Moreover, we can note that if $k \geq \deg \chi_A(x)$, then $A^k$ is a linear combination of $\theset{A^j \mid 0 \leq j \leq n-1}$, and so
+
 
