/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -179,7 +179,8 @@ This induces an invariant factor decomposition $V =\cong \bigoplus k[x]/(f_i)$.
 Since the product of the invariant factors is the characteristic polynomial, the largest invariant factor is the minimal polynomial, and these two are equal, there can only be one invariant factor and thus the invariant factor decomposition is
 $$
 V\cong \frac{k[x]}{(\chi_A(x))}
-.$$
+$$
+as an isomorphism of $k[x]\dash$modules.
 
 So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ for some $\vector v\in V$ such that $\ann(\vector v) = \chi_A(x)$.
 
@@ -187,7 +188,7 @@ So $V$ is a cyclic $k[x]$ module, which means that $V = k[x]\actson \vector v$ f
 
 But then noting that monomials span $k[x]$, we can write
 \begin{align*}
-V &= 
+V &\cong
 k[x] \actson \vector v \\
 &\definedas \theset{f(x) \actson \vector v \suchthat f \in k[x]} \\
 &= \spanof_k \theset{x^k \actson \vector v \suchthat k \geq 0} \\
@@ -195,5 +196,9 @@ k[x] \actson \vector v \\
 .\end{align*}
 
 Moreover, we can note that if $k \geq \deg \chi_A(x)$, then $A^k$ is a linear combination of $\theset{A^j \mid 0 \leq j \leq n-1}$, and so
+\begin{align*}
+V &\cong \spanof_k \theset{A^k\vector v \suchthat k \geq 0} \\
+&= \spanof_k \theset{A^k\vector v \suchthat 1 \leq k \leq n-1}
+.\end{align*}
 
 
