/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -201,4 +201,6 @@ V &\cong \spanof_k \theset{A^k\vector v \suchthat k \geq 0} \\
 &= \spanof_k \theset{A^k\vector v \suchthat 1 \leq k \leq n-1}
 .\end{align*}
 
+$\qed$
+
 
