/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -207,9 +207,17 @@ $\qed$
 
 ### a
 
-By the correspondence theorem, submodules of 
+By the correspondence theorem, submodules of $M/N$ biject with submodules $A$ of $M$ containing $N$.
 
-$\implies$:
+So 
+
+- $M$ is maximal:
+
+- $\iff$ no such proper submodule $A$ exists 
+
+- $\iff$ there are no proper submodules of $M/N$ 
+
+- $\iff M/N$ is simple.
 
 Suppose $N$ is maximal
 
