--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -213,9 +213,9 @@ So
 
 - $M$ is maximal:
 
-- $\iff$ no such proper submodule $A$ exists 
+- $\iff$ no such (proper, nontrivial) submodule $A$ exists 
 
-- $\iff$ there are no proper submodules of $M/N$ 
+- $\iff$ there are no (proper, nontrivial) submodules of $M/N$ 
 
 - $\iff M/N$ is simple.
 
