/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -221,7 +221,7 @@ So
 
 ### b
 
-Identify $\ZZ\dash$modules with abelian groups, then by (a), 
+Identify $\ZZ\dash$modules with abelian groups, then by (a), $M
 
 ### c
 
