--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -225,7 +225,7 @@ Identify $\ZZ\dash$modules with abelian groups, then by (a), $M$ is maximal $\if
 
 By Cauchy's theorem, if $\abs{M/N} = ab$ is a composite number, then $a\divides ab \implies$ there is an element (and thus a subgroup) of order $a$.
 In this case, $M/N$ contains a nontrivial proper cyclic subgroup, so $M/N$ is not simple.
-So $\abs{M/N}$ must be prime.
+So $\abs{M/N}$ can not be composite, and therefore must be prime.
 
 ### c
 
