/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -229,6 +229,9 @@ So $\abs{M/N}$ can not be composite, and therefore must be prime.
 
 ### c
 
+Let $G = \theset{x \in \CC \suchthat x^n=1 \text{ for some }n\in \NN}$, and suppose $H < G$ is a proper subgroup.
+
+Then there is some primitive $m$th root of unity $\zeta_m$ such that $\zeta_m \not\in H$
 
 
 ## 7
