/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -233,6 +233,11 @@ Let $G = \theset{x \in \CC \suchthat x^n=1 \text{ for some }n\in \NN}$, and supp
 
 Then there must be a prime $p$ such that the $\zeta_{p^k} \not \in H$ for all $k$ greater than some constant $m$ -- otherwise, we can use the fact that if $\zeta_{p^k} \in H$ then $\zeta_{p^\ell} \in H$ for all $\ell \leq k$, and if $\zeta_{p^k} \in H$ for all $p$ and all $k$ then $H = G$.
 
+But this means there are infinitely many elements in $G\setminus H$, and so $\abs{G/H} = [G: H] = \infty$ is not a prime. 
+Thus by (b), $H$ can not be maximal, a contradiction.
+
+$\qed$
+
 
 ## 7
 
