--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -243,11 +243,11 @@ $\qed$
 
 ### a
 
-Let $\phi$ denote the map in question, it suffices to show that $\phi$ is $R\dash$linear, i.e. $\phi(r\vector x + \vector y) = r\phi(\vector x) + \phi(\vector y)$.
+Let $\phi$ denote the map in question, it suffices to show that $\phi$ is $R\dash$linear, i.e. $\phi(s\vector x + \vector y) = s\phi(\vector x) + \phi(\vector y)$.
 
 We have
 \begin{align*}
-\phi(r\vector x + \vector y) = 
+\phi(s\vector x + \vector y) = 
 .\end{align*}
 
 
