/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -253,8 +253,11 @@ Let $\phi$ denote the map in question, it suffices to show that $\phi$ is $R\das
 &= s\phi(\vector x) + \phi(\vector y)
 .\end{align*}
 
-
 ### b
+
+We identify $\ker \phi = \theset{x\in R \suchthat rx = 0}$, and since $r\neq 0$ by assumption, this implies each such $x$ is a zero divisor by definition.
+
+
 
 ### c
 
