--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -258,6 +258,9 @@ Let $\phi$ denote the map in question, it suffices to show that $\phi$ is $R\das
 We identify $\ker \phi = \theset{x\in R \suchthat rx = 0}$, and since $r\neq 0$ by assumption, this implies each such $x$ is a zero divisor by definition (and $\ker \phi$ is nonempty by assumption).
 
 Similarly, we identify $\im \phi = \theset{y = rx \suchthat x\in R}$. 
+So let $y\in \im \phi$.
+Since $r$ is a zero divisor, there exists some $z\in R$ such that $rz = 0$.
+But then $yz = rxz = xrz = 0$, so $y$ is a zero divisor.
 
 
 ### c
