/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -260,7 +260,11 @@ We identify $\ker \phi = \theset{x\in R \suchthat rx = 0}$, and since $r\neq 0$ 
 Similarly, we identify $\im \phi = \theset{y = rx \suchthat x\in R}$. 
 So let $y\in \im \phi$.
 Since $r$ is a zero divisor, there exists some $z\in R$ such that $rz = 0$.
-But then $yz = rxz = xrz = 0$, so $y$ is a zero divisor.
+But then 
+$$
+yz = rxz = xrz = 0
+$$ 
+since $R$ is commutative, so $y$ is a zero divisor.
 
 
 ### c
