--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -270,6 +270,10 @@ since $R$ is commutative, so $y$ is a zero divisor.
 
 ### c
 
+> See 1964 Annals "Properties of rings with a finite number of zero divisors"
+
+Let $Z \definedas \theset{z_i}_{i=1}^n$ be the set of $n$ zero divisors in $R$.
+
 ### d
 
 
