--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -273,7 +273,7 @@ since $R$ is commutative, so $y$ is a zero divisor.
 > See 1964 Annals "Properties of rings with a finite number of zero divisors"
 
 Let $Z \definedas \theset{z_i}_{i=1}^n$ be the set of $n$ zero divisors in $R$.
-Let $\phi_i$ be the map $x \mapsto 
+Let $\phi_i$ be the $n$ maps $x \mapsto z_i x$.
 
 ### d
 
