--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -263,7 +263,7 @@ Since $r$ is a zero divisor, there exists some $z\in R$ such that $rz = 0$.
 
 But then 
 $$
-yz = rxz = xrz = 0
+yz = rxz = xrz = 0z2
 $$ 
 since $R$ is commutative, so $y$ is a zero divisor.
 
