--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -275,9 +275,9 @@ since $R$ is commutative, so $y$ is a zero divisor.
 Let $Z \definedas \theset{z_i}_{i=1}^n$ be the set of $n$ zero divisors in $R$.
 Let $\phi_i$ be the $n$ maps $x \mapsto z_i x$, and let $K_i = \ker \phi_i$ be the corresponding kernels.
 
-By $(b)$, $\ker \phi_i$ consists of zero divisors, so $\abs{\ker \phi} \leq n < \infty$ for each $i$.
+By $(b)$, $K_i$ consists of zero divisors, so $\abs{\ker \phi} \leq n < \infty$ for each $i$.
 
-Now consider $R/\ker \phi_i$.
+Now consider $R/K_i \definedas \theset{r + K_i}$.
 
 ### d
 
