/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -287,11 +287,10 @@ $$
 \abs{R/K_i} \leq n < \infty
 .$$
 
-But then $\abs{K_i}$ is finite and $\abs{R/K_i} = [R: K_i]$ is finite as well, so $R$ itself must be finite.
 
-Moreover, 
+But then 
 $$
-\abs{R} = [R:K_i]\abs{K_i} \leq (n)(n) = n^2
+\abs{R} = [R:K_i]\abs{K_i} \leq (n)(n) = n^2 < \infty
 .$$
 
 
