/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -277,7 +277,7 @@ Let $\phi_i$ be the $n$ maps $x \mapsto z_i x$, and let $K_i = \ker \phi_i$ be t
 
 By (b), $K_i$ consists of zero divisors, so 
 $$
-\abs{\ker \phi_i} \leq n < \infty \quad \text{for each } i
+\abs{K_i} \leq n < \infty \quad \text{for each } i
 .$$
 
 Now consider $R/K_i \definedas \theset{r + K_i}$.
