/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -293,7 +293,6 @@ $$
 \abs{R} = [R:K_i]\abs{K_i} \leq (n)(n) = n^2 < \infty
 .$$
 
-
 ### d
 
-
+By (c), if there are exactly 2 zero divisors then $\abs{R} \leq 4$.
