/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -296,4 +296,4 @@ $$
 ### d
 
 By (c), if there are exactly 2 zero divisors then $\abs{R} \leq 4$.
-S
+Since every element in a finite ring is either a unit or a zero divisor, and $\abs{R\units} \geq 2$ since $\pm 1$ are always units, we must have $\abs{R} = 4$.
