/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -298,3 +298,8 @@ $$
 By (c), if there are exactly 2 zero divisors then $\abs{R} \leq 4$.
 Since every element in a finite ring is either a unit or a zero divisor, and $\abs{R\units} \geq 2$ since $\pm 1$ are always units, we must have $\abs{R} = 4$.
 
+Since the characteristic of a ring must divide its size, we have $\char R = 2$ or $4$.
+
+Using the hint, we see that only $\ZZ/(4)$ has characteristic 4.
+
+If $R$ has characteristic 2, it may be isomorphic
