/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -302,4 +302,4 @@ Since the characteristic of a ring must divide its size, we have $\char R = 2$ o
 
 Using the hint, we see that only $\ZZ/(4)$ has characteristic 4.
 
-If $R$ has characteristic 2, it may be isomorphic
+If $R$ has characteristic 2, it may be one of the 3 other rings.
