/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -303,3 +303,5 @@ Since the characteristic of a ring must divide its size, we have $\char R = 2$ o
 Using the hint, we see that only $\ZZ/(4)$ has characteristic 4, but this ring only has one zero divisor.
 
 So $R$ must have characteristic 2.
+
+However, we can write $\ZZ/(2)[t]/(t^2) = \theset{a + bt \suchthat a,b\in \ZZ/(2)}$.
