/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -307,5 +307,13 @@ So $R$ must have characteristic 2.
 However, we can write $\ZZ/(2)[t]/(t^2) = \theset{a + bt \suchthat a,b\in \ZZ/(2)}$, and checking the multiplication table we have
 
 \begin{align*}
+\begin{array}{c|cccc}
+			& 0 & 1 	& t & 1+t 	\\ \hline
+0 		& 0 & 0 	& 0 & 0   	\\ 
+1 		& 0 & 1 	& t & 1+t 	\\ 
+t 		& 0 & t 	& \mathbf{0} & t   	\\ 
+1 + t & 0 & 1+t & t & 1   	\\ 
+\end{array}
+,\end{align*}
 
-.\end{align*}
+and so we find that the only nonzero zero divisor is $t$.
