/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -300,7 +300,7 @@ Since every element in a finite ring is either a unit or a zero divisor, and $\a
 
 Since the characteristic of a ring must divide its size, we have $\char R = 2$ or $4$.
 
-Using the hint, we see that only $\ZZ/(4)$ has characteristic 4, but this ring only has one zero divisor.
+Using the hint, we see that only $\ZZ/(4)$ has characteristic 4, which has exactly 2 zero divisors given by $[0]_4$ and $[2]_4$.
 
 So $R$ must have characteristic 2.
 
