/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -302,9 +302,9 @@ Since the characteristic of a ring must divide its size, we have $\char R = 2$ o
 
 Using the hint, we see that only $\ZZ/(4)$ has characteristic 4, which has exactly 2 zero divisors given by $[0]_4$ and $[2]_4$.
 
-If $R$ has characteristic 2, we can check the other 
+If $R$ has characteristic 2, we can check the other 3 possibilities.
 
-However, we can write $\ZZ/(2)[t]/(t^2) = \theset{a + bt \suchthat a,b\in \ZZ/(2)}$, and checking the multiplication table we have
+We can write $\ZZ/(2)[t]/(t^2) = \theset{a + bt \suchthat a,b\in \ZZ/(2)}$, and checking the multiplication table we have
 
 \begin{align*}
 \begin{array}{c|cccc}
@@ -316,4 +316,5 @@ t 		& 0 & t 	& \mathbf{0} & t   	\\
 \end{array}
 ,\end{align*}
 
-and so we find that the only nonzero zero divisor is $t$.
+and so we find that $t, 0$ are the zero divisors.
+
