/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -322,5 +322,14 @@ In $\ZZ/(2)[t]/(t^2 - t)$, we can check that $t^2 = t \implies t t^2 = t^2 \impl
 
 Similarly, in $\ZZ/(2)[t]/(t^2 + t + 1)$, we can check the bottom-right corner of the multiplication table to find
 \begin{align*}
+\left[\begin{array}{c|cc}
+	& t 	& 1 +t \\ \hline
+t & 1+t & 1 \\
+t & 1 	& t \\
+\end{array}\right]
+,\end{align*}
 
-.\end{align*}
+and so this ring only has one zero divisor.
+
+Thus the only possibilities are:
+
