/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -333,3 +333,7 @@ and so this ring only has one zero divisor.
 
 Thus the only possibilities are:
 
+\begin{align*}
+R &\cong \ZZ/(4) \\
+R &\cong \ZZ/(2)[t] / (t^2)
+.\end{align*}
