/ ‘Class_Notes/2019/Analysis/sections/2019-10-08.md’

--- a/Class_Notes/2019/Analysis/sections/2019-10-08.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-08.md
@@ -48,7 +48,7 @@ Suppose $f \geq 0$ on $\RR^n$, with no assumption of measurability.
 
 Consider defining the "area under the graph" as 
 $$
-\mathcal{A} \definedas \theset{x, y) \in\RR^n \cross \RR \suchthat 0 \leq y \leq f(x)}
+\mathcal{A} \definedas \theset{(x, y) \in\RR^n \cross \RR \suchthat 0 \leq y \leq f(x)}
 .$$
 
 Then
