/ ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex’

--- a/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
+++ b/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
@@ -250,7 +250,7 @@ Prove the validity of the following two statements:
   \item
     Establish the existence of a function \(g \in L^2([0, 1])\) which
     represents \(\Lambda\) in the sense that \[
-    \Lambda(f ) = f (x)g(x) dx \text{ for all } f \in L^2([0, 1]).
+      \Lambda(f ) = \int_0^1 f(x) \overline{g(x)} dx \text{ for all } f \in L^2([0, 1]).
     \]
   \end{enumerate}
 
