/ ‘Class_Notes/2019/Analysis/sections/2019-10-22.md’

--- a/Class_Notes/2019/Analysis/sections/2019-10-22.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-22.md
@@ -23,7 +23,7 @@ $C_c \injects L^1$ is dense.
   $$
   \int_{\theset{\norm{x} \geq N}} \abs{f} < \varepsilon
   .$$ 
-    - Note that $\abs{f(x)} < \varepsilon ~~\forall x\suchthat  \norm x \geq N$ exactly when $f$ is uniformly continuous
+    - Note that $\abs{f(x)} < \varepsilon ~~\forall x$ such that $\norm x \geq N$ exactly when $f$ is uniformly continuous
 
 **Definition:**
 The *convolution* of $f,g$ measurable functions on $\RR^n$ is given by
