/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -4,6 +4,12 @@
 
 We'll show a stronger statement, that $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
+We can use that fact that 
+\begin{align*}
+\abs{f(x) - f(y)}
+&= \abs{\frac 1 x - \frac 1 y} \\
+&= \frac{\abs{x-y}}{xy}
+.\end{align*}
 
 
 ## 2
