/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -4,13 +4,20 @@
 
 We'll show a stronger statement, that $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
-We can use that fact that 
+We can use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < c^{-2}$.
+
+Letting $\varepsilon$ be arbitrary, choose $\delta < \varepsilon c^2$. 
+Then
 \begin{align*}
 \abs{f(x) - f(y)}
 &= \abs{\frac 1 x - \frac 1 y} \\
-&= \frac{\abs{x-y}}{xy}
-.\end{align*}
+&= \frac{\abs{x-y}}{xy} \\
+&\leq \frac{\delta}{xy} \\
+&< \frac{\delta}{c^2} \\
+&< \varepsilon
+,\end{align*}
 
+which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
 
 ## 2
 
