--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -2,7 +2,7 @@
 
 ## 1
 
-We'll show a stronger statement, that $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
+We'll show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
 We can use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < c^{-2}$.
 
