/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -19,6 +19,8 @@ Then
 
 which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
 
+To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon = \frac 1 2$. 
+
 ## 2
 
 ## 3
