/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -19,8 +19,11 @@ Then
 
 which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
 
-To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon = \frac 1 2$.
+To see that $f$ is not uniformly continuous when $c=0$, let $\varepsilon < 1$ be arbitrary.
 
+Let $x_n = \frac 1 n$.
+Then choose $n$ large enough such that $\abs{x_n - x_{n+1}} = \frac 1 n - \frac 1 {n+1} < \delta$.
+Then just note that $f(x_n) = n$ and thus $\abs{f(x_n) - f(x_{n+1})} = n - (n+1) = 1 > \varepsilon$. 
 
 
 ## 2
