--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -28,11 +28,15 @@ Then just note that $f(x_n) = n$ and thus $\abs{f(x_n) - f(x_{n+1})} = n - (n+1)
 
 ## 2
 
+First consider the bounded case where $m(E) < \infty$.
 Since $E$ is measurable, for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
 
 So the the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$, and let $F \definedas \union_{n}$.
 
 Since $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$ and so by continuity of measure,
+\begin{align*}
+m(F) = \lim_n m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
+.\end{align*}
 
 
 ## 3
