/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -29,7 +29,8 @@ Then just note that $f(x_n) = n$ and thus $\abs{f(x_n) - f(x_{n+1})} = n - (n+1)
 ## 2
 
 First consider the bounded case where $m(E) < \infty$.
-Since $E$ is measurable, for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
+
+$E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
 
 So the the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$, and let $F \definedas \union_{n}$.
 
