--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -32,7 +32,7 @@ First consider the bounded case where $m(E) < \infty$.
 
 $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
 
-So take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$, and let $F \definedas \union_{n}$, which is clear an $F_\sigma$ set.
+So take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$, and let $F \definedas \union_{n}$, which is clear an $F_\sigma$ and thus Borel set.
 
 Since $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$ and so by continuity of measure,
 \begin{align*}
