--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -39,6 +39,8 @@ Since $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$ and so by continuity of 
 m(F) = \lim_n m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
 .\end{align*}
 
+If $E$ is not bounded, let $E_N = B_N(0) \intersect E$ which is bounded. 
+Then $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case and take $F \definedas \union_N F_N$.
 
 ## 3
 
