/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -40,7 +40,12 @@ m(F) = \lim_n m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
 .\end{align*}
 
 If $E$ is not bounded, let $E_N = B_N(0) \intersect E$ which is bounded. 
-Then $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case and take $F \definedas \union_N F_N$.
+Then $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case such that $m(E_N \setminus F_N) = 0$.
+
+So take $F \definedas \union_N F_N$ so $F_N \nearrow F$.
+Then $E_N \setminus F_N \nearrow E\setminus F$, so $m(E\setminus F) = \lim_N m(E_N \setminus F_N) = 0$.
+
+
 
 ## 3
 
