/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -50,7 +50,14 @@ E_N \setminus F_N \nearrow E\setminus F \implies m(E\setminus F) = \lim_N m(E_N\
 
 ## 3
 
+\begin{align*}
+\dd{}{t} F(t) 
+&= \dd{}{t} \int_\RR f(x) \cos(xt) ~dx \\
+&\overset{DCT}= \int_\RR f(x) \dd{}{t} \cos(xt) ~dx \\
+&= \int_\RR xf(x) \cos(xt)~dx
+,\end{align*}
 
+so it only remains to justify the DCT.
 
 ## 4
 
