/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -59,6 +59,12 @@ E_N \setminus F_N \nearrow E\setminus F \implies m(E\setminus F) = \lim_N m(E_N\
 
 so it only remains to justify the DCT.
 
+Fix $t$, then let $t_n \to t$ be any sequence.
+Then
+$$
+\dd{}{t} \cos(tx) \definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \overset{MVT} = \dd{}{t}\cos(tx)\evaluatedat{}
+$$
+
 ## 4
 
 ## 5
