/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -61,9 +61,20 @@ so it only remains to justify the DCT.
 
 Fix $t$, then let $t_n \to t$ be any sequence.
 Then
+\begin{align*}
+\dd{}{t} \cos(tx) 
+&\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
+&\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi} \quad \text{for some } \xi \in [t, t_n] \text{ or } [t_n, t] \\
+&= x\sin(\xi x)
+.\end{align*}
 
-\dd{}{t} \cos(tx) \definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi}
+So we can define 
 $$
+h_n(x, t) = f(x)
+\left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right)
+$$
+
+and note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
 
 ## 4
 
