--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -64,8 +64,8 @@ Then
 \begin{align*}
 \dd{}{t} \cos(tx) 
 &\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
-&\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi} \quad \text{for some } \xi \in [t, t_n] \text{ or } [t_n, t] \\
-&= x\sin(\xi x)
+&\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi_n} \quad \text{for some } \xi_n \in [t, t_n] \text{ or } [t_n, t] \\
+&= x\sin(\xi_n x)
 .\end{align*}
 
 So we can define 
@@ -75,6 +75,8 @@ h_n(x, t) = f(x)
 $$
 
 and note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
+
+We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$, and since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption
 
 ## 4
 
