/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -76,7 +76,7 @@ $$
 
 and note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
 
-We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$, and since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption
+We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$ by the above argument, and since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
 
