/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -80,6 +80,7 @@ We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every 
 
 ## 4
 
-
+Possibly incorrect question -- should be $\int_0^\pi$?
+Apparently "easy" part: let $f(x) = \chi_{[0, 1]}$, then $\int_I f(x) \abs{\sin(nx)} = \int_I \abs{\sin(nx)} = 2$
 
 ## 5
