--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -80,7 +80,7 @@ We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every 
 
 ## 4
 
-Apparently "easy" part: let $f(x) = \chi_{[0, \pi]}$, then $\int_\RR f(x) \abs{\sin(nx)} = \int_0^\pi \abs{\sin(nx)} = 2$, and so $\int_0^1 \abs{\sin(nx)} = \frac 2 \pi$.
+Apparently "easy" part: let $f(x) = \chi_{[0, \pi]}$, then $\int_\RR f(x) \abs{\sin(nx)} = \int_0^\pi \abs{\sin(nx)} = 2$, and so $\int_0^1 \abs{\sin(nx)} = \frac 2 \pi$, none of which depend on $n$.
 
 Now approximate $f$ by step functions
 
