--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2018.md
@@ -1,5 +1,7 @@
 #  Fall 2018
 
+> Note: this is considered....not the most useful or representative exam of all time.
+
 ## 1
 
 We'll show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
