/ ‘Class_Notes/2019/Analysis/sections/2019-09-19.md’

--- a/Class_Notes/2019/Analysis/sections/2019-09-19.md
+++ b/Class_Notes/2019/Analysis/sections/2019-09-19.md
@@ -41,7 +41,7 @@ Exercise, not too tricky.
 If $\theset{f_n} \subset L^+$ with $f_k \leq f_{k+1}$ and $f_k \to f$, then $\lim \int f_n = \int \lim f_n = \int f$.
 
 *Proof of MCT:*
-Given any simple $\phi \in L^+$, the set function
+Given any simple $\phi \in L^+$, define the set function
 
 \begin{align*}
 \mu_\phi: \mathcal M \to [0, \infty] \\
