--- a/Class_Notes/2019/Analysis/sections/2019-11-12.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-12.md
@@ -116,7 +116,7 @@ But these are two orthogonal terms, so we can apply Pythagoras to obtain
 ## Trigonometric Series
 
 **Theorem:**
-Let $e_n(x) \definedas e^{2\pi n x}$ for all $x\in [0, 1]$ and $n\in \ZZ$.
+Let $e_n(x) \definedas e^{2\pi i n x}$ for all $x\in [0, 1]$ and $n\in \ZZ$.
 Then $\theset{e_n}_{n\in \ZZ}$ is an *orthonormal basis* for $L^2([0, 1])$.
 
 > Note: Orthonormality is easily check, so the crux of the proof is showing it's a basis.
