/ ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex’

--- a/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
+++ b/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
@@ -394,7 +394,7 @@ Show that \(\int f_{n} \rightarrow \int f\)
 \subsection{1}\label{section}}
 
 Let \[
-f(x) = s \sum_{n=0}^{\infty} \frac{x^{n}}{n !}.
+f(x) = \sum_{n=0}^{\infty} \frac{x^{n}}{n !}.
 \]
 
 Describe the intervals on which \(f\) does and does not converge
