/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -1,3 +1,7 @@
 # Fall 2017
 
 ## 1
+
+Note that $f(x) = e^x$ is entire and thus equal to its power series.
+
+So $f(x) = \sum_{k=0}^\infty \frac 1 {k!}x^k$ and $\abs{f(x) - \}
