--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -3,5 +3,6 @@
 ## 1
 
 Note that $f(x) = e^x$ is entire and thus equal to its power series.
+So $f(x) = \sum_{j=0}^\infty \frac 1 {j!}x^j$.
 
-So $f(x) = \sum_{k=0}^\infty \frac 1 {k!}x^k$ and $\abs{f(x) - \}
+Letting $f_N(x) = \sum_{j=1}^N \frac 1 {j!} x^j$, we have $f_N(x) \to f(x)$ pointwise on $(-\infty ,\infty)$.
