/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -9,3 +9,6 @@ Letting $f_N(x) = \sum_{j=1}^N \frac 1 {j!} x^j$, we have $f_N(x) \to f(x)$ poin
 
 For any compact interval $[-a, a]$, we have
 
+\begin{align*}
+\abs{f_n(x) - f(x)} = \abs{\sum_{j=N+1}^\infty \frac 1 {j!} x^j}
+.\end{align*}
