--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -7,8 +7,16 @@ So $f(x) = \sum_{j=0}^\infty \frac 1 {j!}x^j$.
 
 Letting $f_N(x) = \sum_{j=1}^N \frac 1 {j!} x^j$, we have $f_N(x) \to f(x)$ pointwise on $(-\infty ,\infty)$.
 
-For any compact interval $[-a, a]$, we have
+For any compact interval $[-M, M]$, we have
 
 \begin{align*}
-\abs{f_n(x) - f(x)} = \abs{\sum_{j=N+1}^\infty \frac 1 {j!} x^j}
-.\end{align*}
+\abs{f_N(x) - f(x)} 
+&= \abs{\sum_{j=N+1}^\infty \frac 1 {j!} x^j} \\
+&\leq \sum_{j=N+1}^\infty \frac 1 {j!} \abs{x}^j \\
+&\leq \sum_{j=N+1}^\infty \frac 1 {j!} M^j \\
+&\leq \sum_{j=0}^\infty \frac 1 {j!} M^j \\
+&= e^M \\
+&<\infty
+,\end{align*}
+
+so $f_N \to f$ uniformly on $[-M, M]$.
