/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -19,4 +19,4 @@ For any compact interval $[-M, M]$, we have
 &<\infty
 ,\end{align*}
 
-so $f_N \to f$ uniformly on $[-M, M]$.
+so $f_N \to f$ uniformly on $[-M, M]$ by the M-test.
