/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -10,9 +10,9 @@ Letting $f_N(x) = \sum_{j=1}^N \frac 1 {j!} x^j$, we have $f_N(x) \to f(x)$ poin
 For any compact interval $[-M, M]$, we have
 
 \begin{align*}
-\abs{f_N(x) - f(x)} 
-&= \abs{\sum_{j=N+1}^\infty \frac 1 {j!} x^j} \\
-&\leq \sum_{j=N+1}^\infty \frac 1 {j!} \abs{x}^j \\
+\norm{f_N(x) - f(x)}_\infty
+&= \sup_{-M\leq x \leq M} ~\abs{\sum_{j=N+1}^\infty \frac 1 {j!} x^j} \\
+&\leq \sup_{-M\leq x \leq M} ~ \sum_{j=N+1}^\infty \frac 1 {j!} \abs{x}^j \\
 &\leq \sum_{j=N+1}^\infty \frac 1 {j!} M^j \\
 &\leq \sum_{j=0}^\infty \frac 1 {j!} M^j \\
 &= e^M \\
