--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -20,3 +20,6 @@ For any compact interval $[-M, M]$, we have
 ,\end{align*}
 
 so $f_N \to f$ uniformly on $[-M, M]$ by the M-test.
+Thus it converges on any bounded interval.
+
+It does not converge on $\RR$, since $x^N$ is unbounded.
