/ ‘Class_Notes/2019/Analysis/sections/2019-09-19.md’

--- a/Class_Notes/2019/Analysis/sections/2019-09-19.md
+++ b/Class_Notes/2019/Analysis/sections/2019-09-19.md
@@ -135,7 +135,7 @@ $$
 > Nice trick: showing $a_n \to L$ can be done by showing $a_n - L \to 0$. 
 Similarly, 
 $$
-\int f = \int g \iff \int (f-g) = 0 ~\text{ a.e. }
+\int f = \int g \iff \int (f-g) = 0 
 $$
 
 *Proof of Proposition:*
