--- a/Class_Notes/2019/Analysis/sections/2019-09-19.md
+++ b/Class_Notes/2019/Analysis/sections/2019-09-19.md
@@ -153,7 +153,7 @@ In general, suppose $f = 0$ a.e., note that
 $$
 \phi \leq f = 0 \implies \phi = 0 \text{ a.e. }
 $$ 
-and thus $\int phi = 0$ by the previous case.
+and thus $\int \phi = 0$ by the previous case.
 
 But then 
 $$
