/ ‘Class_Notes/2019/Analysis/sections/2019-09-19.md’

--- a/Class_Notes/2019/Analysis/sections/2019-09-19.md
+++ b/Class_Notes/2019/Analysis/sections/2019-09-19.md
@@ -53,7 +53,7 @@ So if $\theset{E_k} \subset \mathcal M$ and $E_1 \subseteq E_2 \subseteq \cdots$
  
 > Note that 
 $$
-f_k \in L^+ \implies \lim f_k \int L^+ \quad \text{ and }\quad  f_k \leq f_{k+1} \implies \int f_k \leq \int f_{k+1}
+f_k \in L^+ \implies \lim f_k \in L^+ \quad \text{ and }\quad  f_k \leq f_{k+1} \implies \int f_k \leq \int f_{k+1}
 ,$$ 
 so the limit on the LHS makes sense.
 
