--- a/Class_Notes/2019/Analysis/sections/2019-10-03.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-03.md
@@ -12,7 +12,7 @@ Since $f = 0$ a.e., we have $\abs f = 0$ a.e. and since $\abs{f} \in L^+$ we hav
 Now let $E \in \mathcal{M}$; then
 
 \begin{align*}
-\abs{\int_E f} \leq \int_E \abs{F} \leq \int \abs{F} = 0
+\abs{\int_E f} \leq \int_E \abs{f} \leq \int \abs{f} = 0
 .\end{align*}
 
 $\impliedby$:
