/ ‘Class_Notes/2019/Analysis/sections/2019-10-03.md’

--- a/Class_Notes/2019/Analysis/sections/2019-10-03.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-03.md
@@ -16,7 +16,7 @@ Now let $E \in \mathcal{M}$; then
 .\end{align*}
 
 $\impliedby$:
-Suppose $\int_E f = 0 \forall E \in \mathcal{M}$ and $f\neq 0$ a.e., then either
+Suppose $\int_E f = 0 ~~\forall E \in \mathcal{M}$ and $f\neq 0$ a.e., then either
 
 1. $f+$ is positive on a set of nonzero measure, or
 
