/ ‘Class_Notes/2019/Analysis/sections/2019-09-24.md’

--- a/Class_Notes/2019/Analysis/sections/2019-09-24.md
+++ b/Class_Notes/2019/Analysis/sections/2019-09-24.md
@@ -173,7 +173,7 @@ It suffices to show that $\limsup \int \abs{f_n - f} \leq 0$.
 We have to get something non-negative to apply anything we know so far, so
 
 \begin{align*}
-0 \leq \abs{f_n - f} \leq \abs f_n + \abs f \leq g + \abs f \\
+0 \leq \abs{f_n - f} \leq \abs {f_n} + \abs f \leq g + \abs f \\
 \implies g + \abs f - \abs{f_n - f} \geq 0 \\
 (\text{This is where we'll apply Fatou.}) \\
 \implies \int \liminf (g + \abs f - \abs{f_n -f}) &\leq \liminf \int (g + \abs f - \abs{f_n - f})\\
