--- a/Class_Notes/2019/Analysis/sections/2019-08-27.md
+++ b/Class_Notes/2019/Analysis/sections/2019-08-27.md
@@ -95,7 +95,7 @@ If $f_n \to f$ pointwise then $\int f_n \to \int f$.
 ### The Non-Measurable Set
 Can we assign a "measure" to all subsets of $\RR^n$?
 
-This should be a function $m: \mathcal P(\RR^n) \to \RR^{\geq 0} \union \infty = [0, \infty]$ with some properties (see handout).
+This should be a function $m: \mathcal P(\RR^n) \to \RR^{\geq 0} \union \theset{\infty} = [0, \infty]$ with some properties (see handout).
 
 - If $\theset{E_i}_{i\in \NN}$ are disjoint, then $m(\disjoint_{i\in \NN} E_i) = \sum_{i\in\NN} m(E_i)$.
 
