/ ‘Class_Notes/2019/Analysis/sections/2019-08-27.md’

--- a/Class_Notes/2019/Analysis/sections/2019-08-27.md
+++ b/Class_Notes/2019/Analysis/sections/2019-08-27.md
@@ -137,7 +137,8 @@ $$
 a contradiction.
 $\qed$
 
-Any open set in $\RR$ can be written as a *countable* union of intervals **(Exercise)**. 
+*Exercise:*
+Any open set in $\RR$ can be written as a *countable* union of intervals. 
 
 But what can be said about closed sets, or all of $\RR^n$?
 
